--- a/IDP.cabal
+++ b/IDP.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: b553820d165180b0076ab0eb4122f7be45071d15c5b1bc0d43ba4344141df398
+-- hash: 6bd39fb111fa12fcf74ff7391a4329783a658ce5b47091589a3bb01aeb48ef79
 
 name:           IDP
 version:        0.1.0.0
@@ -27,13 +27,15 @@ source-repository head
 
 library
   exposed-modules:
-      Lib
+      InterviewReader
   other-modules:
       Paths_IDP
   hs-source-dirs:
       src
   build-depends:
-      base >=4.7 && <5
+      base >=4.7 && <5,
+      directory,
+      split
   default-language: Haskell2010
 
 executable IDP-exe
