--- a/IDP.cabal
+++ b/IDP.cabal
@@ -35,7 +35,8 @@ library
   build-depends:
       base >=4.7 && <5,
       directory,
-      split
+      split,
+      filepath
   default-language: Haskell2010
 
 executable IDP-exe
