--- a/IDP.cabal
+++ b/IDP.cabal
@@ -28,6 +28,9 @@ source-repository head
 library
   exposed-modules:
       InterviewReader
+      Tester
+      LDA
+      MathUtils
   other-modules:
       Paths_IDP
   hs-source-dirs:
@@ -36,7 +39,13 @@ library
       base >=4.7 && <5,
       directory,
       split,
-      filepath
+      filepath,
+      vector,
+      containers,
+      mtl,
+      random-fu,
+      matrix,
+      math-functions
   default-language: Haskell2010
 
 executable IDP-exe
