--- a/IDP.cabal
+++ b/IDP.cabal
@@ -31,6 +31,8 @@ library
       Tester
       LDA
       MathUtils
+      NewLDA
+      Document
   other-modules:
       Paths_IDP
   hs-source-dirs:
@@ -71,4 +73,6 @@ test-suite IDP-test
   build-depends:
       IDP
     , base >=4.7 && <5
+    , HUnit
+    , containers
   default-language: Haskell2010
