--- a/IDP.cabal
+++ b/IDP.cabal
@@ -67,6 +67,7 @@ test-suite IDP-test
   main-is: Spec.hs
   other-modules:
       Paths_IDP
+      DocumentTest
   hs-source-dirs:
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
@@ -74,5 +75,6 @@ test-suite IDP-test
       IDP
     , base >=4.7 && <5
     , HUnit
+    , hspec
     , containers
   default-language: Haskell2010
