--- a/IDP.cabal
+++ b/IDP.cabal
@@ -52,7 +52,8 @@ library
       mtl,
       random-fu,
       matrix,
-      math-functions
+      math-functions,
+      random
   default-language: Haskell2010
 
 executable IDP-exe
@@ -73,6 +74,7 @@ test-suite IDP-test
   other-modules:
       Paths_IDP
       DocumentTest
+      NewLDATest
   hs-source-dirs:
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
@@ -82,4 +84,5 @@ test-suite IDP-test
     , HUnit
     , hspec
     , containers
+    , matrix
   default-language: Haskell2010
