--- a/IDP.cabal
+++ b/IDP.cabal
@@ -29,14 +29,10 @@ library
   exposed-modules:
       InterviewReader
       LDA
-      MathUtils
-      NewLDA
       Document
       TestData
       Vocabulary
-      Lambda
       Model
-      MatrixExtensions
       HyperParameter
   other-modules:
       Paths_IDP
@@ -47,12 +43,8 @@ library
       directory,
       split,
       filepath,
-      vector,
       containers,
-      mtl,
-      random-fu,
       matrix,
-      math-functions,
       random
   default-language: Haskell2010
 
@@ -74,7 +66,7 @@ test-suite IDP-test
   other-modules:
       Paths_IDP
       DocumentTest
-      NewLDATest
+      LDATest
   hs-source-dirs:
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
