refactor and improve performance

--- a/IDP.cabal
+++ b/IDP.cabal
@@ -28,12 +28,16 @@ source-repository head
 library
   exposed-modules:
       InterviewReader
-      LDA
       Document
       TestData
       Vocabulary
       Model
       HyperParameter
+      LDARunner,
+      LDAEstimator,
+      ModelFactory,
+      DocumentFactory,
+      Debug
   other-modules:
       Paths_IDP
   hs-source-dirs:
@@ -65,8 +69,8 @@ test-suite IDP-test
   main-is: Spec.hs
   other-modules:
       Paths_IDP
-      DocumentTest
-      LDATest
+      DocumentFactoryTest
+      ModelFactoryTest
   hs-source-dirs:
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
