--- a/IDP.cabal
+++ b/IDP.cabal
@@ -39,9 +39,11 @@ library
       LDAEstimator,
       Factory,
       ModelFactory,
-      DocumentFactory,
       Debug,
-      TopicCountsFactory
+      TopicCounts,
+      WordTopicMap,
+      TopicAssignments,
+      DocumentTopicMap
   other-modules:
       Paths_IDP
   hs-source-dirs:
@@ -73,10 +75,10 @@ test-suite IDP-test
   main-is: Spec.hs
   other-modules:
       Paths_IDP
-      DocumentFactoryTest
+      DocumentTest
       ModelFactoryTest
       LDAEstimatorTest
-      TopicCountsFactoryTest
+      TopicCountsTest
   hs-source-dirs:
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
