make topic counts more type safe

--- a/IDP.cabal
+++ b/IDP.cabal
@@ -43,7 +43,8 @@ library
       TopicCounts,
       WordTopicMap,
       TopicAssignments,
-      DocumentTopicMap
+      DocumentTopicMap,
+      InitialTopics
   other-modules:
       Paths_IDP
   hs-source-dirs:
