--- a/IDP.cabal
+++ b/IDP.cabal
@@ -47,7 +47,8 @@ library
       DocumentTopicMap,
       InitialTopics,
       List,
-      Configuration
+      Configuration,
+      InterviewLDARunner
   other-modules:
       Paths_IDP
   hs-source-dirs:
@@ -60,7 +61,8 @@ library
       containers,
       matrix,
       random,
-      time
+      time,
+      parallel-io
   default-language: Haskell2010
 
 executable IDP-exe
