--- a/IDP.cabal
+++ b/IDP.cabal
@@ -1,10 +1,8 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.33.0.
+-- This file has been generated from package.yaml by hpack version 0.34.4.
 --
 -- see: https://github.com/sol/hpack
---
--- hash: 6bd39fb111fa12fcf74ff7391a4329783a658ce5b47091589a3bb01aeb48ef79
 
 name:           IDP
 version:        0.1.0.0
@@ -27,28 +25,28 @@ source-repository head
 
 library
   exposed-modules:
-      InterviewReader,
-      Interview,
-      Directory,
+      Configuration
+      Debug
+      Directory
       Document
-      TestData
-      Vocabulary
-      Model
+      DocumentTopicMap
+      Factory
       HyperParameter
-      LDARunner,
-      LDAEstimator,
-      LDAFinalizer,
-      Factory,
-      ModelFactory,
-      Debug,
-      TopicCounts,
-      WordTopicMap,
-      TopicAssignments,
-      DocumentTopicMap,
-      InitialTopics,
-      List,
-      Configuration,
+      InitialTopics
+      Interview
       InterviewLDARunner
+      InterviewReader
+      LDAEstimator
+      LDAFinalizer
+      LDARunner
+      List
+      Model
+      ModelFactory
+      TestData
+      TopicAssignments
+      TopicCounts
+      Vocabulary
+      WordTopicMap
   other-modules:
       Paths_IDP
   hs-source-dirs:
